--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:background="@color/mainBgColor"
     tools:context=".MainActivity">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="60dp"
@@ -16,24 +16,32 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="match_parent"
-            android:adjustViewBounds="true"
-            android:scaleType="fitStart"
+            android:id="@+id/image_logo"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:src="@drawable/title_logo" />
-    </androidx.appcompat.widget.LinearLayoutCompat>
+            android:adjustViewBounds="true"
+            android:clickable="false"
+            android:scaleType="fitStart"
+            android:src="@drawable/title_logo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/constraintLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/Widget.Material3.CardView.Elevated"
-        app:cardElevation="@dimen/margin_4dp"
-        app:cardCornerRadius="@dimen/margin_8dp"
-        android:paddingBottom="@dimen/margin_8dp"
-        app:layout_constraintTop_toBottomOf="@+id/title">
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/enter"
+            style="@style/Widget.Material3.Button.TextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/lobster"
+            android:text="Войти"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/image_logo"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="@+id/title"
@@ -53,7 +61,6 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:listitem="@layout/category_item" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </com.google.android.material.card.MaterialCardView>
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment"
