--- a/app/src/main/res/layout/fragment_data_about_buyer.xml
+++ b/app/src/main/res/layout/fragment_data_about_buyer.xml
@@ -41,7 +41,6 @@
                 android:id="@+id/radioGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_8dp"
                 android:orientation="horizontal"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -138,6 +137,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="@dimen/margin_16dp"
                 android:fontFamily="@font/lobster"
+                android:textColor="@color/green"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="@+id/name"
                 app:layout_constraintTop_toBottomOf="@+id/dostavka"
