--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -33,11 +33,7 @@
         android:id="@+id/navigation_main"
         android:name="com.sheniv.inpre.fragments.bottom.MainFragment"
         android:label="fragment_main"
-        tools:layout="@layout/fragment_main">
-        <action
-            android:id="@+id/action_navigation_main_to_registerFragment"
-            app:destination="@id/registerFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_main"/>
     <fragment
         android:id="@+id/dataAboutBuyer"
         android:name="com.sheniv.inpre.fragments.DataAboutBuyer"
@@ -56,18 +52,12 @@
         <action
             android:id="@+id/action_registerFragment_to_codeFragment"
             app:destination="@id/codeFragment" />
-        <action
-            android:id="@+id/action_registerFragment_to_addFlower2"
-            app:destination="@id/addFlower" />
     </fragment>
     <fragment
         android:id="@+id/codeFragment"
         android:name="com.sheniv.inpre.fragments.add_flower.CodeFragment"
         android:label="fragment_code"
         tools:layout="@layout/fragment_code">
-        <action
-            android:id="@+id/action_codeFragment_to_addFlower"
-            app:destination="@id/addFlower" />
         <argument
             android:name="mPhoneNumber"
             app:argType="string"
