--- a/app/src/main/res/layout/activity_about_flower.xml
+++ b/app/src/main/res/layout/activity_about_flower.xml
@@ -6,16 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".AboutFlowerActivity">
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/card"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardCornerRadius="12dp"
+        android:layout_height="wrap_content"
+        style="@style/Widget.Material3.CardView.Filled"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
+            android:paddingBottom="@dimen/padding_16dp"
             android:layout_height="wrap_content">
 
             <androidx.viewpager2.widget.ViewPager2
@@ -31,6 +32,7 @@
                 android:layout_height="@dimen/margin_16dp"
                 app:tabBackground="@drawable/tab_pager_selector"
                 app:tabGravity="center"
+                android:background="@null"
                 app:tabIndicatorHeight="0dp"
                 android:layout_gravity="bottom"
                 app:layout_constraintStart_toStartOf="parent"
@@ -70,71 +72,67 @@
                 app:layout_constraintTop_toTopOf="@+id/text_flower"
                 tools:text="345 BYN" />
 
-            <!--<androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/about"
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_basket"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/margin_12dp"
+                android:text="В корзину"
+                android:textColor="#048C3F"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/review_text_layout"
+                app:strokeColor="#048C3F"
+                app:strokeWidth="1dp" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_basket_delete"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/margin_12dp"
+                android:text="Удалить"
+                android:textColor="#D3ED1002"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/review_text_layout"
+                app:strokeColor="#D3ED1002"
+                app:strokeWidth="1dp" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/review_text_layout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:fontFamily="@font/akaya_telivigala"
-                android:textSize="16sp"
+                android:hint="Оставить отзыв"
+                android:layout_marginEnd="@dimen/margin_8dp"
+                app:endIconCheckable="true"
+                app:endIconDrawable="@drawable/ic_baseline_send_24"
+                app:endIconMode="custom"
                 app:layout_constraintEnd_toStartOf="@+id/button_basket"
                 app:layout_constraintStart_toStartOf="@+id/articul_flower"
-                app:layout_constraintTop_toBottomOf="@+id/articul_flower"
-                tools:text="про  цветы" />-->
+                app:layout_constraintTop_toBottomOf="@+id/articul_flower">
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constrainedHeight="true"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ratingBar">
-
-                <ScrollView
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/review_text"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent"
+                    android:maxHeight="100dp" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/text_about_flower"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/margin_8dp"
-                        android:background="@drawable/image_style"
-                        android:padding="@dimen/padding_8dp"
-                        android:scrollbars="vertical"
-                        android:text="@string/about_care_new" />
-                </ScrollView>
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button_basket"
-                android:layout_width="wrap_content"
-                android:layout_height="26dp"
-                android:layout_margin="@dimen/margin_12dp"
-                android:text="@string/in_basket"
-                android:background="@drawable/button_basket_style"
-                android:textSize="10sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cost" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button_basket_delete"
-                android:layout_width="wrap_content"
-                android:layout_height="26dp"
-                android:layout_margin="@dimen/margin_12dp"
-                android:text="Удалить"
-                android:background="@drawable/basket_button_delete"
-                android:textSize="10sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cost" />
-
-            <RatingBar
-                android:id="@+id/ratingBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:progress="29"
-                app:layout_constraintStart_toStartOf="@+id/articul_flower"
-                app:layout_constraintTop_toBottomOf="@+id/articul_flower" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_review"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/margin_8dp"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/card"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:listitem="@layout/item_review" />
 </androidx.constraintlayout.widget.ConstraintLayout>
