--- a/app/src/main/res/layout/fragment_about_care.xml
+++ b/app/src/main/res/layout/fragment_about_care.xml
@@ -3,14 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.bottom.DeliveryFragment">
+    tools:context=".fragments.bottom.AboutCareFragment">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/delivery_text"
+            android:id="@+id/about_care_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="left"
