--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -7,7 +7,7 @@
     android:padding="@dimen/padding_16dp"
     tools:context=".fragments.add_flower.RegisterFragment">
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,26 +16,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/enter_phone"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/inter_phone_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:hint="Введите свой номер телефона"
         android:layout_marginVertical="@dimen/padding_16dp"
         android:inputType="phone"
-        android:text="+16505552494"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/enter_phone"
+            android:inputType="phone"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/get_code"
-        style="@style/Widget.Material3.Button.ElevatedButton"
-        android:textSize="16sp"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Получить код"
-        app:layout_constraintEnd_toEndOf="@+id/enter_phone"
-        app:layout_constraintStart_toStartOf="@+id/enter_phone"
-        app:layout_constraintTop_toBottomOf="@+id/enter_phone" />
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/inter_phone_layout"
+        app:layout_constraintStart_toStartOf="@+id/inter_phone_layout"
+        app:layout_constraintTop_toBottomOf="@+id/inter_phone_layout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
