--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -105,4 +105,9 @@
         android:name="com.sheniv.inpre.fragments.add_flower.ChangeCurrentFlowerFragment"
         android:label="fragment_change_current_flower"
         tools:layout="@layout/fragment_change_current_flower" />
+    <fragment
+        android:id="@+id/aboutCareFragment"
+        android:name="com.sheniv.inpre.fragments.bottom.AboutCareFragment"
+        android:label="fragment_about_care"
+        tools:layout="@layout/fragment_about_care" />
 </navigation>
