--- a/app/src/main/res/layout/fragment_data_about_buyer.xml
+++ b/app/src/main/res/layout/fragment_data_about_buyer.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".fragments.DataAboutBuyer">
+    tools:context=".fragments.bottom.DataAboutBuyer">
 
     <com.google.android.material.card.MaterialCardView
         style="@style/Widget.Material3.CardView.Filled"
