--- a/app/src/main/res/layout/activity_about_flower.xml
+++ b/app/src/main/res/layout/activity_about_flower.xml
@@ -10,7 +10,7 @@
         android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/Widget.Material3.CardView.Filled"
+        style="@style/Widget.Material3.CardView.Elevated"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -124,6 +124,18 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/text_review"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_8dp"
+        android:layout_marginStart="@dimen/margin_8dp"
+        android:fontFamily="@font/lobster"
+        android:textSize="16sp"
+        android:text="Отзывы покупателей:"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/card" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_review"
         android:layout_width="match_parent"
@@ -132,7 +144,7 @@
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/card"
+        app:layout_constraintTop_toBottomOf="@+id/text_review"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:listitem="@layout/item_review" />
 </androidx.constraintlayout.widget.ConstraintLayout>
